--- a/Modulo 1/IC_M1_01_Saida.ipynb
+++ b/Modulo 1/IC_M1_01_Saida.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "848f49bb",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
    ],
    "source": [
     "print(\"Olá\")\n",
-    "print(\"mundo!\")"
+    "print(\"mundo!\""
    ]
   }
  ],
